[tool.poetry]
name = "sound-remover"
version = "0.1.0"
description = "removes sound from an audio track"
authors = ["Dash <dash.winterson@forumbrands.com>"]
license = "BSD"
readme = "README.md"
packages = [{include = "sound_remover"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
panns-inference = "^0.0.7"
librosa = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
